Start BCI chapter. Add initial text to visual stimulus section.

--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -4,7 +4,7 @@
 \usepackage{url} 						% to add url in bib
 \usepackage{tablefootnote}				% add footnotes to tables
 \usepackage{subcaption}					% for subfigures
-\usepackage{amsmath}					% for curly braces
+\usepackage{mathtools}					% for curly braces under equation. Also includes amsmath.
 
 \usepackage[nogroupskip]{glossaries}	% for acronyms
 \renewcommand{\glossarysection}[2][]{}	% no title for glossary
