--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -177,7 +177,8 @@ VEP section
 	year = {2001},
 	volume = {13},
 	number = {4},
-	pages = {293--8}
+	pages = {293--8},
+	url = {http://link.springer.com/article/10.1023/A%3A1011132830123}
 }
 
 @article{blausen,
