--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,13 +1,3 @@
-@article{bin2009cca,
-	title={An online multi-channel {SSVEP}-based brain-computer interface using a canonical correlation analysis method},
-	author={Guangyu Bin and Xiaorong Gao and Zheng Yan and Bo Hong and Shangkai Gao},
-	journal={Journal of Neural Engineering},
-	volume={6},
-	number={4},
-	year={2009},
-	publisher={IOP Publishing}
-}
-
 @article{scikit-learn,
 	title={Scikit-learn: Machine Learning in {P}ython},
 	author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
@@ -41,6 +31,19 @@
 	pages={10-20},
 	ISSN={1521-9615},
 	DOI={10.1109/MCSE.2007.58}
+}
+
+@article{Hunter:2007,
+    Address = {10662 LOS VAQUEROS CIRCLE, PO BOX 3014, LOS ALAMITOS, CA 90720-1314 USA},
+    Author = {Hunter, John D.},
+    Journal = {Computing In Science \& Engineering},
+    Number = {3},
+    Pages = {90--95},
+    Publisher = {IEEE COMPUTER SOC},
+    Title = {Matplotlib: A 2D graphics environment},
+    Type = {Editorial Material},
+    Volume = {9},
+    Year = {2007},
 }
 
 Electrical activity in the brain
@@ -79,11 +82,11 @@ Neuron section
 
 @article{electric_field,
 	title={The origin of extracellular fields and currents--{EEG, ECoG, LFP} and spikes},
-	author={Buzsáki G. and Anastassiou C.A. and Koch C.},
+	author={Buzsáki, G. and Anastassiou, C. A. and Koch, C.},
 	year={2012},
 	volume={13},
 	number={6},
-	pages={407--20},
+	pages={407--420},
 	journal={Nature Reviews Neuroscience},
 	url={http://www.nature.com.ezproxy.utlib.ee/nrn/journal/v13/n6/full/nrn3241.html}
 }
@@ -94,7 +97,6 @@ Brain imaging techniques comparison
 	title = {A review on continuous wave functional near-infrared spectroscopy and imaging instrumentation and methodology},
 	journal = {NeuroImage},
 	volume = {85},
-	number = {0},
 	pages = {6--27},
 	year = {2014},
 	issn = {1053-8119},
@@ -132,7 +134,7 @@ EEG section
 	journal = {Journal of Clinical Neurophysiology},
 	volume = {23},
 	number = {3},
-	pages = {186--9},
+	pages = {186--189},
 	year = {2006},
 	url = {http://www.braincoretherapy.com/wp-content/uploads/2014/01/Neurophysiologic-Basis-of-EEG.pdf}
 }
@@ -177,7 +179,7 @@ VEP section
 	year = {2001},
 	volume = {13},
 	number = {4},
-	pages = {293--8},
+	pages = {293--298},
 	url = {http://link.springer.com/article/10.1023/A%3A1011132830123}
 }
 
@@ -189,6 +191,55 @@ VEP section
 	year = {2014},
 	url = {https://en.wikiversity.org/wiki/Blausen_gallery_2014},
 	key = {Blausen.com staff}
+}
+
+BCI Chapter
+Visual stimuli section
+
+PSDA section
+
+CCA section
+
+@article{cca_hotelling,
+	title = {Relations between two sets of variates},
+	author = {Harold Hotelling},
+	journal = {Biometrika},
+	volume = {28},
+	pages = {321–-377},
+	number = {3-4},
+	year = {1936}
+}
+
+@article{cca_fmri,
+	title = {Detection of neural activity in functional {MRI} using canonical correlation analysis},
+	author = {Friman, O. and Cedefamn, J. and Lundberg, P. and Borga, M. and Knutsson, H.},
+	journal = {Magnetic Resonance in Medicine},
+	year = {2001},
+	volume = {45},
+	number = {2},
+	pages = {323--330},
+	url = {http://www.researchgate.net/profile/Magnus_Borga/publication/12151337_Detection_of_neural_activity_in_functional_MRI_using_canonical_correlation_analysis/links/02e7e5244c4b0cd194000000.pdf}
+}
+
+@article{cca_eeg_lin,
+	title = {Frequency Recognition Based on Canonical Correlation Analysis for {SSVEP-based BCIs}},
+	author = {Zhonglin Lin and  Changshui Zhang and Wei Wu and Xiaorong Gao},
+	journal = {Biomedical Engineering},
+	volume = {54},
+	number = {6},
+	year = {2007},
+	url = {http://bigeye.au.tsinghua.edu.cn/english/paper/lin_tbme.pdf}
+}
+
+@article{bin2009cca,
+	title = {An online multi-channel {SSVEP}-based brain-computer interface using a canonical correlation analysis method},
+	author = {Guangyu Bin and Xiaorong Gao and Zheng Yan and Bo Hong and Shangkai Gao},
+	journal = {Journal of Neural Engineering},
+	volume = {6},
+	number = {4},
+	year = {2009},
+	publisher = {IOP Publishing},
+	url = {http://iopscience.iop.org.ezproxy.utlib.ee/1741-2552/6/4/046002/pdf/1741-2552_6_4_046002.pdf}
 }
 
 Example
