--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -196,6 +196,25 @@ VEP section
 BCI Chapter
 Visual stimuli section
 
+@article{11hz,
+	title = {Visual stimulus design for high-rate SSVEP BCI},
+	journal = {Electronics Letters},
+	author = {Y. Wang and Y.-T. Wang and T.-P. Jung},
+	volume = {46},
+	number = {15},
+	pages = {1057--1058},
+	year = {2010},
+	url = {http://ieeexplore.ieee.org.ezproxy.utlib.ee/stamp/stamp.jsp?tp=&arnumber=5521370&tag=1}
+}
+
+@article{emotiv_11hz,
+	title = {Implementation of SSVEP based BCI with Emotiv EPOC},
+	author = {Yue Liu and Xiao Jiang and Teng Cao and Feng Wan and Peng Un Mak and Pui-In Mak and Mang I Vai},
+	journal = {Virtual Environments Human-Computer Interfaces and Measurement Systems {(VECIMS)}, 2012 {IEEE} International Conference},
+	pages = {34--37},
+	year = {2012}
+}
+
 PSDA section
 
 CCA section
