--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -15,6 +15,11 @@
 \newacronym{VEP}{VEP}{visual evoked potential}
 \newacronym{SSVEP}{SSVEP}{steady-state visual evoked potential}
 \newacronym{ADC}{ADC}{analog-to-digital converter}
+\newacronym{SC}{SC}{stability coefficient}
+\newacronym{PSDA}{PSDA}{power spectrum density analysis}
+\newacronym{MEC}{MEC}{minimum energy combination}
+\newacronym{LASSO}{LASSO}{least absolute shrinkage and selection operator}
+\newacronym{LRT}{LRT}{likelihood ratio test}
 
 % Packages for layout testing
 
