--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -194,6 +194,64 @@ VEP section
 }
 
 BCI Chapter
+
+@article{psda,
+	title = {Design and implementation of a brain-computer interface with high transfer rates},
+	author = {Ming Cheng and Xiaorong Gao and Shangkai Gao and Dingfeng Xu},
+	journal = {Biomedical Engineering, IEEE Transactions on},
+	volume = {49},
+	number = {10},
+	pages = {1181--1186},
+	year = {2002}
+}
+
+@article{sc,
+	title = {Frequency detection with stability coefficient for steady-state visual evoked potential {(SSVEP)}-based {BCIs}},
+	author = {Wu, Z. and Yao, D.},
+	journal = {Journal of neural engineering},
+	volume = {5},
+	number = {1},
+	pages = {36--43},
+	year = {2008}
+}
+
+@article{mec,
+	title = {Multiple Channel Detection of Steady-State Visual Evoked Potentials for Brain-Computer Interfaces},
+	author = {Friman, O. and Volosyak, I. and Graser, A.},
+	journal = {Biomedical Engineering, IEEE Transactions on},
+	volume = {54},
+	issue = {4},
+	pages = {742--750},
+	year = {2007}
+}
+
+@article{mec_comparison,
+	title = {{SSVEP}-based {Bremen-BCI} interface--boosting information transfer rates},
+	author = {Volosyak, I.},
+	journal = {Journal of neural engineering},
+	volume = {8},
+	number = {3},
+	year = {2011},
+}
+
+@article{LASSO,
+	title = {LASSO based stimulus frequency recognition model for SSVEP BCIs},
+	author = {Yu Zhang and Jing Jin and Xiangyun Qing and Bei Wang and Xingyu Wang},
+	journal = {Biomedical Signal Processing and Control},
+	volume = {7},
+	number = {2},
+	pages = {104–-111},
+	year = {2012}
+}
+
+@article{LRT,
+	title = {An Efficient Frequency Recognition Method Based on Likelihood Ratio Test for {SSVEP-Based BCI}},
+	author = {Yangsong Zhang and Li Dong and Rui Zhang and Dezhong Yao and Yu Zhang and Peng Xu},
+	journal = {Computational and Mathematical Methods in Medicine},
+	volume = {2014},
+	year = {2014}
+}
+
 Visual stimuli section
 
 @article{11hz,
@@ -240,7 +298,7 @@ CCA section
 	url = {http://www.researchgate.net/profile/Magnus_Borga/publication/12151337_Detection_of_neural_activity_in_functional_MRI_using_canonical_correlation_analysis/links/02e7e5244c4b0cd194000000.pdf}
 }
 
-@article{cca_eeg_lin,
+@article{cca_lin,
 	title = {Frequency Recognition Based on Canonical Correlation Analysis for {SSVEP-based BCIs}},
 	author = {Zhonglin Lin and  Changshui Zhang and Wei Wu and Xiaorong Gao},
 	journal = {Biomedical Engineering},
