--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -208,7 +208,7 @@ BCI Chapter
 @article{sc,
 	title = {Frequency detection with stability coefficient for steady-state visual evoked potential {(SSVEP)}-based {BCIs}},
 	author = {Wu, Z. and Yao, D.},
-	journal = {Journal of neural engineering},
+	journal = {Journal of Neural Engineering},
 	volume = {5},
 	number = {1},
 	pages = {36--43},
@@ -228,7 +228,7 @@ BCI Chapter
 @article{mec_comparison,
 	title = {{SSVEP}-based {Bremen-BCI} interface--boosting information transfer rates},
 	author = {Volosyak, I.},
-	journal = {Journal of neural engineering},
+	journal = {Journal of Neural Engineering},
 	volume = {8},
 	number = {3},
 	year = {2011},
@@ -252,6 +252,62 @@ BCI Chapter
 	year = {2014}
 }
 
+@article{MPCC,
+	title = {Multi-phase cycle coding for {SSVEP} based brain-computer interfaces},
+	author = {Jijun Tong and Danhua Zhu},
+	journal = {BioMedical Engineering},
+	volume = {14},
+	number = {5},
+	year = {2015}
+}
+
+@article{dual1,
+	title = {A novel multiple frequency stimulation method for steady state {VEP} based brain computer interfaces},
+	author = {T. M. Srihari Mukesh and V. Jaganathan and M. Ramasubba Reddy},
+	journal = {Physiological Measurement},
+	volume = {27},
+	number = {1},
+	year = {2006},
+	pages = {61--71}
+}
+
+@article{dual2,
+	title = {A new dual-frequency stimulation method to increase the number of visual stimuli for multi-class {SSVEP}-based brain–computer interface {(BCI)}},
+	author = {Han-Jeong Hwanga and Dong Hwan Kimb and Chang-Hee Hana and Chang-Hwan Ima},
+	journal = {Brain Research},
+	volume = {1515},
+	pages = {66-–77},
+	year = {2013}
+}
+
+BCI comparison
+
+@article{bci_comparison,
+	title = {A survey of signal processing algorithms in brain-computer interfaces based on electrical brain signals},
+	author = {Ali Bashashati and Mehrdad Fatourechi and Rabab K. Ward and Gary E. Birch},
+	journal = {Journal of Neural Engineering},
+	volume = {4},
+	year = {2007},
+	number = {2},
+	pages = {R32–R57}
+}
+
+@article{hybrid_bci,
+	title = {A Review of Hybrid Brain-Computer Interface Systems},
+	author = {Setare Amiri and Reza Fazel-Rezai and Vahid Asadpour},
+	journal = {Advances in Human-Computer Interaction},
+	volume = {2013},
+	year = {2013}
+}
+
+@article{hybrid_bci2,
+	title = {Problem solving using hybrid brain-computer interface methods: A review},
+	author = {Henshaw, James and Liu, Wei and Romano, Daniela},
+	journal = {Cognitive Infocommunications {(CogInfoCom)}, 2014 5th {IEEE} Conference on},
+	pages = {215--219},
+	year = {2014}
+}
+
 Visual stimuli section
 
 @article{11hz,
@@ -266,11 +322,29 @@ Visual stimuli section
 }
 
 @article{emotiv_11hz,
-	title = {Implementation of SSVEP based BCI with Emotiv EPOC},
+	title = {Implementation of {SSVEP based BCI with Emotiv EPOC}},
 	author = {Yue Liu and Xiao Jiang and Teng Cao and Feng Wan and Peng Un Mak and Pui-In Mak and Mang I Vai},
 	journal = {Virtual Environments Human-Computer Interfaces and Measurement Systems {(VECIMS)}, 2012 {IEEE} International Conference},
 	pages = {34--37},
 	year = {2012}
+}
+
+@article{lcd_lcd_led,
+	title = {Reliable visual stimuli on {LCD screens for SSVEP based BCI}},
+	author = {Hubert Cecotti and Ivan Volosyak and Axel Graser},
+	journal = {The 2010 European Signal Processing Conference {(EUSIPCO-2010)}},
+	year = {2010},
+	pages = {5},
+	url = {https://hal.archives-ouvertes.fr/hal-00536125/document}
+}
+
+@article{ssvep_stim,
+	title = {A Survey of Stimulation Methods Used in {SSVEP}-Based {BCI}s},
+	author = {Danhua Zhu and Jordi Bieger and Gary Garcia Molina and Ronald M. Aarts},
+	journal = {Computational Intelligence and Neuroscience},
+	volume = {2010},
+	year = {2010},
+	pages = {1--13}
 }
 
 PSDA section
