--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -20,6 +20,7 @@
 \newacronym{MEC}{MEC}{minimum energy combination}
 \newacronym{LASSO}{LASSO}{least absolute shrinkage and selection operator}
 \newacronym{LRT}{LRT}{likelihood ratio test}
+\newacronym{MPCC}{MCPP}{multi-phase cycle coding}
 
 % Packages for layout testing
 
