--- a/thesis/tex/BCI.tex
+++ b/thesis/tex/BCI.tex
@@ -3,25 +3,25 @@
 
 In this chapter we will discuss which kind of visual stimulus can be used to elicit \glspl{SSVEP} and how to detect \glspl{SSVEP} in a \gls{EEG} recording. This allows us to extract information from the \gls{EEG} recording and use this information to control a robot. In other words, we will discuss how to implement a \gls{VEP}-based \gls{BCI}.
 
-A review by Bashashati \emph{et al.} gives a good overview of \glspl{BCI} based on \gls{EEG} recordings \cite{bci_comparison}. Their paper includes overview of the following neuromechanisms used in \glspl{BCI}:
+A review by Bashashati \emph{et al.} gives a good overview of \glspl{BCI} based on \gls{EEG} recordings~\cite{bci_comparison}. Their paper includes overview of the following neuromechanisms used in \glspl{BCI}:
 \begin{enumerate}
 	\item \gls{VEP} or \gls{SSVEP}
 	\item P300
 	\item Slow cortical potential
 	\item Response to mental task
 	\item Sensorimotor activity, for example event-related synchronisation and desynchronisation
-	\item Multiple neuromechanisms or hybrid BCI \cite{hybrid_bci, hybrid_bci2}. Hybrid BCI uses two different neuromechanisms in a BCI. Therefore, two different \gls{EEG} analysing methods are required.
+	\item Multiple neuromechanisms or hybrid BCI~\cite{hybrid_bci, hybrid_bci2}. Hybrid BCI uses two different neuromechanisms in a BCI. Therefore, two different \gls{EEG} analysing methods are required.
 \end{enumerate}
 
 \section{Visual stimulus}
 
-As discussed in section \ref{sec:VEP}, it is possible to present multiple visual stimuli to a subject and detect, which stimulus is the subject looking at. It was also mentioned that computer monitor can be used to present visual stimuli. In this thesis only the stimulus that can be presented by a computer monitor is discussed. Research has shown that LCD screens produce more accurate stimuli than light-emitting diodes \cite{lcd_lcd_led}. 
+As discussed in section~\ref{sec:VEP}, it is possible to present multiple visual stimuli to a subject and detect, which stimulus is the subject looking at. It was also mentioned that computer monitor can be used to present visual stimuli. In this thesis only the stimulus that can be presented by a computer monitor is discussed. Research has shown that LCD screens produce more accurate stimuli than light-emitting diodes~\cite{lcd_lcd_led}. 
 
-A computer monitor has certain size, resolution and refresh rate. Monitor resolution and size affect the size of the visual stimulus that can be used and the distance between the stimuli. Monitor refresh rate, on the other hand, affects the blinking speed of the stimulus that can be used. Research has shown that LCD screens produce more accurate stimuli when using the monitor refresh rate for synchronisation rather than a timer \cite{lcd_lcd_led}.
+A computer monitor has certain size, resolution and refresh rate. Monitor resolution and size affect the size of the visual stimulus that can be used and the distance between the stimuli. Monitor refresh rate, on the other hand, affects the blinking speed of the stimulus that can be used. Research has shown that LCD screens produce more accurate stimuli when using the monitor refresh rate for synchronisation rather than a timer~\cite{lcd_lcd_led}.
 
 Monitor refresh rate is the number of consecutive images or frames shown on screen in a second, assuming that the frames are produces at least as fast as they can be displayed. A frame is one of the images that compose the changing picture on screen. Monitor with a refresh rate of 60 Hz can display 60 frames per second. 
 
-Typically, blinking one-coloured squares on one-coloured background are used as visual stimuli in \gls{SSVEP}-based \glspl{BCI} \cite{ssvep_stim}. The squares may have symbols on them, for example letters or numbers. The stimuli of \gls{VEP}-based \gls{BCI} are also called targets.
+Typically, blinking one-coloured squares on one-coloured background are used as visual stimuli in \gls{SSVEP}-based \glspl{BCI}~\cite{ssvep_stim}. The squares may have symbols on them, for example letters or numbers. The stimuli of \gls{VEP}-based \gls{BCI} are also called targets.
 
 In every frame each target can be in one of two states - displayed or not displayed. The state of a target can be changed only when the frame changes. Switches between the states of a target can be represented with a function of state versus time:
 \begin{equation}
@@ -32,15 +32,15 @@ In every frame each target can be in one of two states - displayed or not displa
 		0,	&\mbox{if the target is not displayed on the screen at time t}
 	\end{cases}
 \end{equation}
-See figure \ref{fig:square_waves} for example. The function $y(t)$ has to be periodic and the state switches should be distributed as evenly as possible over the period of the function for the target frequency to be constant.
+See figure~\ref{fig:square_waves} for example. The function~$y(t)$ has to be periodic and the state switches should be distributed as evenly as possible over the period of the function for the target frequency to be constant.
 
 The fastest possible target frequency can be achieved by changing between on and off states of the target every time a new frame is displayed. If the state is changed at lower rate, the target frequency will also be lower. Perhaps it is most reasonable to calculate the target frequency with:
 \begin{equation}
 	f = \frac{n}{2T}
 \end{equation}
-where T is the period of the function $y(t)$, n is the number of times the target state is switched in a time period of T and f is the target frequency.
+where T is the period of the function~$y(t)$, n is the number of times the target state is switched in a time period of T and f is the target frequency.
 
-In the following discussion it is assumed that the refresh rate is 60 Hz. The blinking of a target with a frequency of 10 Hz can easily be divided among frame changes. The blinking of a target with a frequency of 12 Hz, however, has to be adjusted so that the amounts of time the target is displayed and not displayed are not equal. With 11 Hz target frequency the blinking has to be even more irregular \cite{11hz}. Although the 11 Hz target frequency produces irregular blinking, it is still possible to detect \gls{SSVEP} elicited by it in the Emotiv EPOC recording \cite{emotiv_11hz}.
+In the following discussion it is assumed that the refresh rate is 60 Hz. The blinking of a target with a frequency of 10 Hz can easily be divided among frame changes. The blinking of a target with a frequency of 12 Hz, however, has to be adjusted so that the amounts of time the target is displayed and not displayed are not equal. With 11 Hz target frequency the blinking has to be even more irregular~\cite{11hz}. Although the 11 Hz target frequency produces irregular blinking, it is still possible to detect \gls{SSVEP} elicited by it in the Emotiv EPOC recording~\cite{emotiv_11hz}.
 %In general, if the refresh rate divided by target frequency is:
 %\begin{itemize}
 %	\item even number, then $y(t)$ is a square wave.
@@ -89,28 +89,28 @@ The decomposition process itself is called Fourier transform and it is used to d
 \begin{equation}
 	|z|=\sqrt{a^2+b^2}
 \end{equation}
-Since we are working with discrete signal as discussed in section \ref{sec:EEG_comparison}, we will use the discrete Fourier transform. The algorithm used to compute the discrete Fourier transform is called \gls{FFT}.
+Since we are working with discrete signal as discussed in section~\ref{sec:EEG_comparison}, we will use the discrete Fourier transform. The algorithm used to compute the discrete Fourier transform is called \gls{FFT}.
 
 \section{SSVEP-based brain-computer interface}
 \label{sec:SSVEP_detection}
 The aim of this chapter is to give overview of two methods used to detect \glspl{SSVEP} in \gls{EEG} recording. Current methods include:
 \begin{enumerate}
-	\item \gls{PSDA} method introduced by Cheng \emph{et al.} \cite{psda}.
-	\item \gls{SC} method introduced by Wu and Yao \cite{sc}.
-	\item \gls{MEC} method introduced by Friman \emph{et al.} \cite{mec}. This method shows better performance than \gls{SC} and \gls{PSDA} method \cite{mec_comparison}.
-	\item \gls{CCA} method introduced by Lin \emph{et al.} \cite{cca_lin}. This method shows better performance than \gls{PSDA} method \cite{bin2009cca}.
-	\item \gls{LASSO} method introduced by Zhang \emph{et al.} \cite{LASSO}. This method shows better performance than \gls{CCA} method \cite{LASSO}.
-	\item \gls{LRT} method introduced by Zhang \emph{et al.} \cite{LRT}. This method shows better performance than \gls{CCA} method and similar performance to \gls{LASSO} method \cite{LRT}.
-	\item \gls{MPCC} method introduced by Tong \emph{et al.} \cite{MPCC}.
-	\item dual-frequency \gls{SSVEP} methods \cite{dual1, dual2}.
+	\item \gls{PSDA} method introduced by Cheng \emph{et al.}~\cite{psda}.
+	\item \gls{SC} method introduced by Wu and Yao~\cite{sc}.
+	\item \gls{MEC} method introduced by Friman \emph{et al.}~\cite{mec}. This method shows better performance than \gls{SC} and \gls{PSDA} method~\cite{mec_comparison}.
+	\item \gls{CCA} method introduced by Lin \emph{et al.}~\cite{cca_lin}. This method shows better performance than \gls{PSDA} method~\cite{bin2009cca}.
+	\item \gls{LASSO} method introduced by Zhang \emph{et al.}~\cite{LASSO}. This method shows better performance than \gls{CCA} method~\cite{LASSO}.
+	\item \gls{LRT} method introduced by Zhang \emph{et al.}~\cite{LRT}. This method shows better performance than \gls{CCA} method and similar performance to \gls{LASSO} method~\cite{LRT}.
+	\item \gls{MPCC} method introduced by Tong \emph{et al.}~\cite{MPCC}.
+	\item dual-frequency \gls{SSVEP} methods~\cite{dual1, dual2}.
 \end{enumerate}
 
 \subsection{Power spectral density analysis}
 
-Power Spectral density (PSD) analysis is widely used in \gls{SSVEP}-based \glspl{BCI} \cite{bin2009cca}.
+Power Spectral density (PSD) analysis is widely used in \gls{SSVEP}-based \glspl{BCI}~\cite{bin2009cca}.
 
 \subsection{Canonical correlation analysis}
 
-\Gls{CCA} was first introduced by Harold Hotelling in 1936 \cite{cca_hotelling}. In 2001 \gls{CCA} was used to introduce a novel method for detecting neural activity in \gls{fMRI} data \cite{cca_fmri}. Likewise, \gls{CCA} was introduced to \gls{EEG} recording analysis for the first time in 2007 \cite{cca_lin}. 
+\Gls{CCA} was first introduced by Harold Hotelling in 1936~\cite{cca_hotelling}. In 2001 \gls{CCA} was used to introduce a novel method for detecting neural activity in \gls{fMRI} data~\cite{cca_fmri}. Likewise, \gls{CCA} was introduced to \gls{EEG} recording analysis for the first time in 2007~\cite{cca_lin}. 
 
-\Gls{CCA} is statistical method that can be used when analysing two sets of data. In \gls{SSVEP}-based \glspl{BCI} one set of data is the multichannel \gls{EEG} recording. For example, if recording data with electrodes located in O1 and O2, the recorded data can be represented with canonical variable $X=x_{O1}+x_{O2}$. The second set of data is ...
+\Gls{CCA} is statistical method that can be used when analysing two sets of data. In \gls{SSVEP}-based \glspl{BCI} one set of data is the multichannel \gls{EEG} recording. For example, if recording data with electrodes located in O1 and O2, the recorded data can be represented with canonical variable~$X=x_{O1}+x_{O2}$. The second set of data is ...
